res/css/views/rooms/_LinkPreviewWidget.scss
/*
Copyright 2015, 2016 OpenMarket Ltd

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

.mx_LinkPreviewWidget {
    margin-top: 15px;
    margin-right: 15px;
    margin-bottom: 15px;
    display: flex;
    border-left: 4px solid $preview-widget-bar-color;
    color: $preview-widget-fg-color;
}

.mx_LinkPreviewWidget_image {
    flex: 0 0 100px;
    margin-left: 15px;
    text-align: center;
    cursor: pointer;
}

.mx_LinkPreviewWidget_caption {
    margin-left: 15px;
    flex: 1 1 auto;
}

.mx_LinkPreviewWidget_title {
    display: inline;
    font-weight: bold;
    white-space: normal;
}

.mx_LinkPreviewWidget_siteName {
    display: inline;
}

.mx_LinkPreviewWidget_description {
    margin-top: 8px;
    white-space: normal;
    word-wrap: break-word;
}

.mx_MatrixChat_useCompactLayout {
    .mx_LinkPreviewWidget {
        margin-top: 6px;
        margin-bottom: 6px;
    }
}

